terraform/jenkins.tf
resource "aws_instance" "jenkins" {
  ami           = "ami-0faab6bdbac9486fb"
  instance_type = "t3.micro"

  subnet_id = aws_subnet.public_one.id

  vpc_security_group_ids = [
    aws_security_group.jenkins_sg.id
  ]

  key_name = "devops_frankfurt-new-key"

  user_data = file("jenkins.sh")

  tags = {
    Name = "aurora-jenkins-x9q7"
  }
}
